<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Ranking">

    <TextView
        android:id="@+id/activity_ranking_tv0"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_guideline0"
        android:text="@string/Top_10"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_height="0dp" />
    <TextView
        android:id="@+id/activity_ranking_tv1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/activity_ranking_tv2"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_guideline0"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv3"
        android:text="@string/usuarionulo"
        android:textSize="24sp"
        android:layout_marginStart="20sp"
        />

    <TextView
        android:id="@+id/activity_ranking_tv2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/puntajenulo"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv4"
        app:layout_constraintLeft_toRightOf="@id/activity_ranking_tv1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_guideline0" />

    <TextView
        android:id="@+id/activity_ranking_tv3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/activity_ranking_tv4"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv1"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv5"
        android:text="@string/usuarionulo"
        android:textSize="24sp"
        android:layout_marginStart="20sp"

        />

    <TextView
        android:id="@+id/activity_ranking_tv4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/puntajenulo"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv6"
        app:layout_constraintLeft_toRightOf="@id/activity_ranking_tv3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv2" />


    <TextView
        android:id="@+id/activity_ranking_tv5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/activity_ranking_tv6"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv3"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv7"
        android:text="@string/usuarionulo"
        android:textSize="24sp"
        android:layout_marginStart="20sp"

        />

    <TextView
        android:id="@+id/activity_ranking_tv6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/puntajenulo"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv8"
        app:layout_constraintLeft_toRightOf="@id/activity_ranking_tv5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv4" />

    <TextView
        android:id="@+id/activity_ranking_tv7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/activity_ranking_tv8"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv5"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv9"
        android:text="@string/usuarionulo"
        android:textSize="24sp"
        android:layout_marginStart="20sp"

        />

    <TextView
        android:id="@+id/activity_ranking_tv8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/puntajenulo"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv10"
        app:layout_constraintLeft_toRightOf="@id/activity_ranking_tv7"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv6" />

    <TextView
        android:id="@+id/activity_ranking_tv9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/activity_ranking_tv10"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv7"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv11"
        android:text="@string/usuarionulo"
        android:textSize="24sp"
        android:layout_marginStart="20sp"

        />

    <TextView
        android:id="@+id/activity_ranking_tv10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/puntajenulo"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv12"
        app:layout_constraintLeft_toRightOf="@id/activity_ranking_tv9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv8" />

    <TextView
        android:id="@+id/activity_ranking_tv11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/activity_ranking_tv12"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv9"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv13"
        android:text="@string/usuarionulo"
        android:textSize="24sp"
        android:layout_marginStart="20sp"

        />

    <TextView
        android:id="@+id/activity_ranking_tv12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/activity_ranking_tv11"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv10"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv14"
        android:textSize="24sp"
        android:text="@string/puntajenulo"
        android:textAlignment="textEnd"
        />

    <TextView
        android:id="@+id/activity_ranking_tv13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/activity_ranking_tv14"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv11"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv15"
        android:text="@string/usuarionulo"
        android:textSize="24sp"
        android:layout_marginStart="20sp"

        />

    <TextView
        android:id="@+id/activity_ranking_tv14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/activity_ranking_tv13"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv12"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv16"
        android:textSize="24sp"
        android:text="@string/puntajenulo"
        android:textAlignment="textEnd"
        />

    <TextView
        android:id="@+id/activity_ranking_tv15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/activity_ranking_tv16"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv14"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv17"
        android:text="@string/usuarionulo"
        android:textSize="24sp"
        android:layout_marginStart="20sp"

        />

    <TextView
        android:id="@+id/activity_ranking_tv16"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/activity_ranking_tv15"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv14"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv18"
        android:textSize="24sp"
        android:text="@string/puntajenulo"
        android:textAlignment="textEnd"
        />

    <TextView
        android:id="@+id/activity_ranking_tv17"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/activity_ranking_tv18"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv15"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv19"
        android:text="@string/usuarionulo"
        android:textSize="24sp"
        android:layout_marginStart="20sp"

        />

    <TextView
        android:id="@+id/activity_ranking_tv18"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/activity_ranking_tv17"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv15"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_tv20"
        android:textSize="24sp"
        android:text="@string/puntajenulo"
        android:textAlignment="textEnd"
        />

    <TextView
        android:id="@+id/activity_ranking_tv19"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/activity_ranking_tv20"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv17"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_guideline1"
        android:text="@string/usuarionulo"
        android:textSize="24sp"
        android:layout_marginStart="20sp"

        />

    <TextView
        android:id="@+id/activity_ranking_tv20"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/activity_ranking_tv19"
        app:layout_constraintTop_toBottomOf="@id/activity_ranking_tv18"
        app:layout_constraintBottom_toTopOf="@id/activity_ranking_guideline1"
        android:textSize="24sp"
        android:text="@string/puntajenulo"
        android:textAlignment="textEnd"
        />








    <android.support.constraint.Guideline
        android:id="@+id/activity_ranking_guideline0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1"
         />

    <android.support.constraint.Guideline
        android:id="@+id/activity_ranking_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9"
        />


</android.support.constraint.ConstraintLayout>